--- a/tour/readme
+++ b/tour/readme
@@ -8,6 +8,7 @@ Python Packages:
 3. Splash (pip install splash)
 4. splash-scrapy (pip install splash-scrapy)
 5. flask (pip install flask)
+6. sudo apt-get install python3-pyqt5
 
 How to run:
 1. python test.py
