Fixed issues end to end updated settings.py for splash

--- a/tour/readme
+++ b/tour/readme
@@ -16,3 +16,8 @@ Not Need - Just for future use
 
 How to run:
 1. python test.py
+
+
+Known Issue:
+1. If 127.0.0.1 is opened in browser we get error as 'proc'  not defined.
+	if proc.poll() == None:
